--- a/preamble.tex
+++ b/preamble.tex
@@ -21,12 +21,14 @@
 \DeclareMathOperator{\arccsc}{arccsc}
 \DeclareMathOperator{\lcm}{lcm}
 \DeclareMathOperator{\ord}{ord}
+\DeclareMathOperator{\sym}{sym}
 
 
 \def\N{\mathbb{N}}
 \def\Z{\mathbb{Z}}
 \def\Q{\mathbb{Q}}
 \def\R{\mathbb{R}}
+\def\C{\mathbb{C}}
 \def\labelitemi{$\circ$}
 \def\inv{^{-1}}
 \def\ang#1{\left\langle#1\right\rangle}
@@ -39,7 +41,11 @@
 
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}
-%\newtheorem{corollary}
+\newtheorem{proposition}{Proposition}
+
+\theoremstyle{remark}
+\newtheorem{corollary}{Corollary}
+\newtheorem{claim}{Claim}
 
 
 % <== end: math
