--- a/french/french.org
+++ b/french/french.org
@@ -241,9 +241,83 @@
 ** Séance 9
 - C'est qui?
 
-| Française |   | Anglias |
-|-----------+---+---------|
-|           |   |         |
+| Française    | Anglias  |
+|--------------+----------|
+| un hibou     | =owl=    |
+| un dauphin   |          |
+| une crevette | =shrimp= |
+| une jument   |          |
+| une balein   |          |
+
+
+Activité: À l'adie des desssins proposés, écoutez et
+complétez les mots avec les voyelles manquantes.
+
+| Française | Anglias |
+|-----------+---------|
+| un bidon  | =កាដុង=  |
+| caleçon   | =ខោខ្លី=  |
+| abitre    |         |
+| chemise   | =shirt= |
+| musicien  |         |
+| solution  |         |
+| garage    |         |
+| remorque  |         |
+| arabe     |         |
+| militaire |         |
+
+Activité: À l'aide des dessins proposés, lisez et cochez la
+bonne réponse.
+
+** Séance 10
+
+*Activité*: Écoutez le 2éme syllabe les mots et cochez la bonne
+case. C'est quelle consone?
+
+| Française     | Anglias        |
+|---------------+----------------|
+| une coiffeuse | =hair dresser= |
+| un jardinier  | =gardener=     |
+| un biberon    | =milk bottle=  |
+| une bracelet  |                |
+| un accident   |                |
+|---------------+----------------|
+| balance       |                |
+| cadenas       | =lock=         |
+| cabane        | =small house=  |
+| faculté       | =faculty=      |
+| directrice    |                |
+| adolescent    |                |
+| difficulté    |                |
+| publicité     |                |
+| déboiser      | =tree cutters= |
+| francophone   |                |
+
+** Séance 11
+- C'est quel légume?
+- C'est la carotte!
+
+*Activité:* À l'aide des dessins proposés, lisez les mots et
+esayez de cochez dans la bonne case.
+
+| Française     | Anglias              |
+|---------------+----------------------|
+| la kilo       |                      |
+| l'hydrogéne   |                      |
+| la karaté     |                      |
+| le kangourou  |                      |
+| l'hélicoptère |                      |
+|---------------+----------------------|
+| goyave        |                      |
+| jujube        |                      |
+| handicapé     |                      |
+| galerie       |                      |
+| kinésie       | =cure with movement= |
+| hirondelle    | =a kind of bird=     |
+| bagage        | =luggage=            |
+| cohabiter     |                      |
+| bijouterie    |                      |
+| anglophone    |                      |
 
 ** Séance 12
 Les consonnes: L,M,N,P
@@ -288,61 +362,77 @@ lkjasdf
 11. climat =climate=
 12. para = =anti=
 
-** Séance 13: Les 26 lettre - Les voyelles et les consonnes
-- Qq (last)
-- Qu (first)
-- R
-- S
-- T
-| Française |   | Anglias |
-|-----------+---+---------|
-|           |   |         |
-|           |   |         |
+** Séance 13
 
-1. rambutang
-2. assangseur
-3. pea ro quea
-4. a qu ri
-5. mon qu stang
+- C'est quell légume?
+- Écoutez la 3éme syllabe des mots et cochez dans la bonne casė.
+  C'est quelle lettre? C'est Q,R,S ou T?
+- Activité 12: À l'aide des dessins proposés,
+  écoutez et complétez les mots avec les
+  consonnes manquantes.
+- Merci de votre participation
 
-Écoutez la 3éme syllabe des mots et cochez
-dans la bonne casė.
-C'est quelle lettre? C'est Q,R,S ou T?
+| Française     | Anglias          |
+|---------------+------------------|
+| concombre     |                  |
+| ail           | =garlic=         |
+| oignon        | =onion=          |
+| aubergine     |                  |
+| poivron       | =pepper=         |
+| fenouil       | =fennel=         |
+| chou fleur    | =cauliflower=    |
+| brocoli       |                  |
+|---------------+------------------|
+| le ramboutan  |                  |
+| un ascenseur  | =elevator=       |
+| un perroquet  | =parrot=         |
+| un écureuil   |                  |
+| le mangoustan |                  |
+|---------------+------------------|
+| saleté        | =dirty=          |
+| ventilateur   | =fan=            |
+| identique     |                  |
+| opération     |                  |
+| alpiniste     | =mountaineer=    |
+| cinquante     | =50=             |
+| terrasse      | =terrace= =យ៉ផ្ទះ= |
+| poissonnerie  | =fish shop=      |
+| inscription   | =registration=   |
+| réfrigérateur |                  |
 
-1. Le ramboutan
-2. Un ascenseur (elevator)
-3. Le perroquet (parrot)
-4. un écureuil (squerrel)
-5. Le mangoustan (mangosteen)
-
-Activité 12: À l'aide des dessins proposés,
-écoutez et complétez les mots avec les
-consonnes manquantes.
-1. saleté =កខ្វក់=
-2. ventilateur =fan=
-3. indentique
-4. opération =operation=
-5. alpiniste =professional hiker=
-6. cinquante =50=
-7. terrasse =យ៉មុខផ្ទះ=
-8. poisonnerie =ផ្សាលក់គ្រឿងសមុទ្រ=
-9. inscription =ចុះឈ្មោះ=
-10. réfrigérateur
-11. vent =wind=
-12. alp =a mountain in France=
-13. frigo
-14. Merci de votre participation
 ** Séance 14
 
-| Française |   | Anglias |
-|-----------+---+---------|
-|           |   |         |
+- C'est quell fruit?
+
+| Française | Anglias       |
+|-----------+---------------|
+| fruit     |               |
+| ananas    | =pineappe=    |
+| kiwis     |               |
+| oranges   |               |
+| citrons   | =lemon=       |
+| manque    | =mango=       |
+| babane    |               |
+|-----------+---------------|
+| yaourt    |               |
+| whisky    |               |
+| zébre     |               |
+| texte     |               |
+| yoga      |               |
+|-----------+---------------|
+| avocat    | =layer=       |
+| xylophage |               |
+| wagon     | =kind of car= |
+| zéro      |               |
+| citoyen   | =citizen=     |
+| taxation  |               |
+| riziére   | =rice field=  |
+| exerice   |               |
+| traversin | =pillow?=     |
+| voyageur  | =travelor=    |
 
 ** Séance 15
 
-| Française |   | Anglias |
-|-----------+---+---------|
-|           |   |         |
 
 (4pt)
 1. [ ] un Hibou
@@ -388,7 +478,7 @@ troi (5pt)
 4. un texte
 5. le yoga
 
-** Séance 16: Les consonnes
+** Séance 16
 
 
 | Française  |          | Description               |
@@ -444,3 +534,52 @@ Activité 3: Lisez mes mots.
 - La gerçure  =jea-sear= =ប្រះកែងជើង=
 - La chauffeuse =អ្នកបើករថយន្ត=
 - La scène  =ឈុតឆាក=
+
+** Séance 17
+Comprehension des éscrits
+- kh
+- ph
+- th
+- gn
+- ng
+
+*Activité:* À l'adide des dessins proposés,
+lisez et completétez les mots avec consonnes composées manquantes.
+
+- Le mot numero 1 les consonnes composées
+- Mes chers étudiants, voilà la leçon pour ce soir.
+- le parking
+- la photocopie
+- la champagne
+- les mathématiques
+- le khmérophone
+
+*Activité*: C'est quelles consonnes composées.
+- cigogne =កុក=
+- jogging
+- pharmacie
+- athènes =a city in Greek=
+- hypokhange
+
+
+| Française     | Description            |
+|---------------+------------------------|
+| cigonge       |                        |
+| jogging       |                        |
+| pharmacie     |                        |
+| Athénes       |                        |
+| hypokhâgne    | =សាលាត្រៀមប្រឡងចូលការងារ= |
+|               |                        |
+|               |                        |
+| campagne      | =ជនបទ=                 |
+| orphelinat    | =មណ្ឌលកុមារកំព្រា=         |
+| Kazakhztan    |                        |
+| ping-pong     |                        |
+| enthousiasme  | =អារម្មណ៍រីករាយ=          |
+| footing       |                        |
+| éloignement   | =ការឃ្លាតឆ្ងាយ=          |
+| sympathique   | =គួរឱ្យរាប់អាន=           |
+| morphosyntaxe | =grammar related=      |
+| mékhitariste  | =សមាជិកសាសនានៅបារាំង=    |
+
+NOTE: Proper nouns didn't have /les,la,le/.
