add statistic, and learn code.

--- a/README.org
+++ b/README.org
@@ -11,6 +11,7 @@ everthing here are incorrect.
 
 * French
 I have no experience what so ever in French. But here are the resources I use
+- [[https://www.youtube.com/channel/UC0x30zg5FzDAq-NDzCing7w][Morphle en Fraçias]]
 - [[https://www.youtube.com/c/EasyFrench][Easy French]] youtube channel
 - [[https://www.youtube.com/channel/UCXptamDYEVcU4JCio30hYTw][Peppa Pig]] (kids' show lol)
 
