--- a/linear-algebra/linear.tex
+++ b/linear-algebra/linear.tex
@@ -7,10 +7,29 @@
 
 \chapter{Preliminaries}
 \section{Vector Spaces}
-\subsection{Bases}
-\subsection{Generating (span)}
-\subsection{Independent System}
 
+
+
+%the set $E (\R^3)$
+%\[\circ : E\times E\to E\]
+%called binary operation.
+
+%We use scalor multiplication to strech the vector, 
+%called \emph{inner product.}
+%\[(\R/\C)\times E\to E\]
+%for example: $\alpha \cdot(a,b):=(\alpha a, \alpha b)$
+
+
+
+\newpage
+% ==> bases
+\subsection{Bases}
+% <==
+% ==>
+\subsection{Generating (span)}
+% <==
+% ==> independent and dependent
+\subsection{Independent System}
 \begin{definition}[Independent]
   The system $\left\{\vec{v_1},\vec{v_2},\vec{v_3},\dots,
   \vec{v_n}\right\}$ are 
@@ -51,12 +70,7 @@
 \begin{proposition}
   Bases $\iff$ Generating + Independent
 \end{proposition}
-
-
-
-
-\section{Linear Transformation}
-
+% <==
 
 
 
