--- a/preamble.tex
+++ b/preamble.tex
@@ -32,6 +32,7 @@
 \def\labelitemi{$\circ$}
 \def\inv{^{-1}}
 \def\ang#1{\left\langle#1\right\rangle}
+\def\tran{^\mathrm{T}}
 \renewcommand{\vec}[1]{\mathbf{#1}}
 
 \theoremstyle{definition}
@@ -64,6 +65,7 @@
 % <== 
 % ==> enumerate
 \usepackage{enumitem}
+\usepackage{multicol}
 % <==
 % ==> title
 \author{Sivmeng}
