--- a/preamble.tex
+++ b/preamble.tex
@@ -38,7 +38,7 @@
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}[chapter]
 \newtheorem{axiom}[definition]{Axiom}
-\newtheorem{exercise}{Exercise}
+\newtheorem{exercise}{Exercise}[section]
 \newtheorem{example}[exercise]{Example}
 
 \theoremstyle{plain}
